WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109728
Crash when encountering <object style="resize:both;">
https://bugs.webkit.org/show_bug.cgi?id=109728
Summary
Crash when encountering <object style="resize:both;">
Christian Biesinger
Reported
2013-02-13 12:04:52 PST
Crash when encountering <object style="resize:both;">
Attachments
Patch
(3.42 KB, patch)
2013-02-13 12:06 PST
,
Christian Biesinger
no flags
Details
Formatted Diff
Diff
Patch
(3.44 KB, patch)
2013-02-13 12:17 PST
,
Christian Biesinger
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Christian Biesinger
Comment 1
2013-02-13 12:06:57 PST
Created
attachment 188141
[details]
Patch
Christian Biesinger
Comment 2
2013-02-13 12:07:48 PST
See also
https://code.google.com/p/chromium/issues/detail?id=175535
Ojan - can you review?
Eric Seidel (no email)
Comment 3
2013-02-13 12:11:39 PST
Comment on
attachment 188141
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=188141&action=review
> LayoutTests/fast/css/resize-object-crash-expected.txt:1 > +
Often we say "PASS, didn't crash" or similar to make it obvious what the proper output is supposed to be.
Christian Biesinger
Comment 4
2013-02-13 12:17:29 PST
Created
attachment 188143
[details]
Patch
WebKit Review Bot
Comment 5
2013-02-13 13:38:14 PST
Comment on
attachment 188143
[details]
Patch Clearing flags on attachment: 188143 Committed
r142788
: <
http://trac.webkit.org/changeset/142788
>
WebKit Review Bot
Comment 6
2013-02-13 13:38:18 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug