Crash when encountering <object style="resize:both;"> https://bugs.webkit.org/show_bug.cgi?id=109728

Source/WebCore:

See also https://code.google.com/p/chromium/issues/detail?id=175535
This bug can be reproduced on
http://dramalink.net/tudou.y/?xink=162601060

Patch by Christian Biesinger <cbiesinger@chromium.org> on 2013-02-13
Reviewed by Eric Seidel.

Test: fast/css/resize-object-crash.html

* rendering/RenderWidget.cpp:
(WebCore::RenderWidget::paint):
Only call paintResizer() if we have a layer and canResize() is true

LayoutTests:

See also https://code.google.com/p/chromium/issues/detail?id=175535

Patch by Christian Biesinger <cbiesinger@chromium.org> on 2013-02-13
Reviewed by Eric Seidel.

* fast/css/resize-object-crash-expected.txt: Added.
* fast/css/resize-object-crash.html: Added.

Canonical link: https://commits.webkit.org/128008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142788 268f45cc-cd09-0410-ab3c-d52691b4dbfc